Implementation of isCompleted
